--- a/css/main.scss
+++ b/css/main.scss
@@ -169,11 +169,18 @@ table {
 }
 
 th {
+	font-size: 16px;
+	font-weight: bold;
 	border: 1px solid #ddd;
+	display: table-cell;
+	padding: 6px 10px;
 }
 
 td {
+	font-size: 16px;
 	border: 1px solid #ddd;
+	display: table-cell;
+	padding: 6px 10px;
 }
 
 img, object, video {
