--- a/css/main.scss
+++ b/css/main.scss
@@ -152,16 +152,18 @@ article {
 }
 
 blockquote {
-    margin: 30px 0;
-    font-style: italic;
-    padding: 0;
-    padding-left: 3rem;
+	margin: 0;
+	color: #777;
+	border-left: 4px solid #ddd;
+    padding: 0 15px;
     border: 0;
     p {
-        color: #333;
-        line-height: 1.48;
-        font-size: 1.2em;
-    }
+		display: block;
+		-webkit-margin-before: 1em;
+		-webkit-margin-after: 1em;
+		-webkit-margin-start: 0px;
+		-webkit-margin-end: 0px;
+	}
 }
 
 table {
