--- a/css/main.scss
+++ b/css/main.scss
@@ -156,6 +156,7 @@ blockquote {
 	color: #777;
 	border-left: 4px solid #ddd;
     padding: 0 15px;
+	font-size: 16px;
     p {
 		display: block;
 		-webkit-margin-before: 1em;
