--- a/css/main.scss
+++ b/css/main.scss
@@ -157,6 +157,9 @@ blockquote {
 	border-left: 4px solid #ddd;
     padding: 0 15px;
 	font-size: 16px;
+	margin-bottom: 16px;
+	line-height: 1.6;
+	word-wrap: break-word;
     p {
 		display: block;
 		-webkit-margin-before: 1em;
