--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,32 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
 }
 
+h1:before {
+  content: "\f10c\00a0";
+  font-family: FontAwesome;
+  color: #E1E1E8;
+}
+h2:before {
+  content: "\f10c\00a0\f10c\00a0";
+  font-family: FontAwesome;
+  color: #E1E1E8;
+}
+h3:before {
+  content: "\f10c\00a0\f10c\00a0\f10c\00a0";
+  font-family: FontAwesome;
+  color: #E1E1E8;
+}
+h4:before {
+  content: "\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0";
+  font-family: FontAwesome;
+  color: #E1E1E8;
+}
+h5:before {
+  content: "\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0";
+  font-family: FontAwesome;
+  color: #E1E1E8;
+}
+
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Pacifico);
 
 .index-title, .navbar-brand, .section-year, .archive-title, .pager, .page-title {
