--- a/css/main.scss
+++ b/css/main.scss
@@ -26,27 +26,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1:before {
-  content: "\f10c\00a0";
+  content: '\f10c\00a0';
   font-family: FontAwesome;
   color: #E1E1E8;
 }
 h2:before {
-  content: "\f10c\00a0\f10c\00a0";
+  content: '\f10c\00a0\f10c\00a0';
   font-family: FontAwesome;
   color: #E1E1E8;
 }
 h3:before {
-  content: "\f10c\00a0\f10c\00a0\f10c\00a0";
+  content: '\f10c\00a0\f10c\00a0\f10c\00a0';
   font-family: FontAwesome;
   color: #E1E1E8;
 }
 h4:before {
-  content: "\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0";
+  content: '\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0';
   font-family: FontAwesome;
   color: #E1E1E8;
 }
 h5:before {
-  content: "\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0";
+  content: '\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0\f10c\00a0';
   font-family: FontAwesome;
   color: #E1E1E8;
 }
